Add footer, privacy and cookie pages

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,11 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: inherit;
+  color: inherit;
+}
+
 .sentry-error-embed-wrapper {
   z-index: 9999 !important;
 }
